--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ md-5 = "0.10.5"
 ndarray = "0.15.6"
 nom = "7.1.1"
 petgraph = "0.6.2"
+serde_json = "1.0.87"
 ureq = { version = "2.5.0", features = ["cookies"] }
