--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ dotenvy = "0.15.6"
 itertools = "0.10.5"
 md-5 = "0.10.5"
 ndarray = "0.15.6"
+ndarray-stats = "0.5.1"
 nom = "7.1.1"
 petgraph = "0.6.2"
 serde_json = "1.0.87"
