--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,17 @@ edition = "2021"
 
 
 [dependencies]
-clap = { version = "4.0.23", features = ["derive"] }
+arboard = { version = "3.3.0", default-features = false }
+bstr = "1.8.0"
+clap = { version = "4.4.8", features = ["derive"] }
 color-eyre = "0.6.2"
-dotenvy = "0.15.6"
-itertools = "0.10.5"
-md-5 = "0.10.5"
+dotenvy = "0.15.7"
+itertools = "0.12.0"
+md-5 = "0.10.6"
 ndarray = "0.15.6"
 ndarray-stats = "0.5.1"
-nom = "7.1.1"
-petgraph = "0.6.2"
-serde_json = "1.0.87"
-ureq = { version = "2.5.0", features = ["cookies"] }
+petgraph = "0.6.4"
+serde_json = "1.0.108"
+time = { version = "0.3.30", features = ["macros"] }
+ureq = { version = "2.9.0", features = ["cookies"] }
+winnow = { version = "0.5.19", features = ["simd"] }
