--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 
+# For profiling purposes
+[profile.release]
+debug = true
+
+
 [dependencies]
 arboard = { version = "3.3.0", default-features = false }
+atoi = "2.0.0"
 bstr = "1.8.0"
 clap = { version = "4.4.8", features = ["derive"] }
 color-eyre = "0.6.2"
