--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ itertools = "0.12.0"
 md-5 = "0.10.6"
 ndarray = "0.15.6"
 ndarray-stats = "0.5.1"
+num = "0.4.1"
 petgraph = "0.6.4"
 serde_json = "1.0.108"
 time = { version = "0.3.30", features = ["macros"] }
