--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,12 @@ edition = "2021"
 
 
 [dependencies]
-arboard = { version = "3.3.0", default-features = false }
 atoi = "2.0.0"
 bstr = "1.8.0"
 clap = { version = "4.4.11", features = ["derive"] }
 color-eyre = "0.6.2"
 dotenvy = "0.15.7"
+faer = "0.16.0"
 itertools = "0.12.0"
 md-5 = "0.10.6"
 ndarray = "0.15.6"
